tests/paczka1/fuzzy1/62414892.err
Error in line 1: ky200FCyIiJ A259 51,6
Error in line 7: S275 S84 26,1
Error in line 5: ky200FCyIiJ A729 55,5
Error in line 19: ?S{4
Error in line 30: kyI00FCyIiJ S84 7I,6
Error in line 29: b7eJAD A259 77,3
Error in line 34: b7eJAD S84 40,0
